--- a/compose/production/traefik/traefik.yml
+++ b/compose/production/traefik/traefik.yml
@@ -19,7 +19,7 @@ certificatesResolvers:
   letsencrypt:
     # https://docs.traefik.io/master/https/acme/#lets-encrypt
     acme:
-      email: 'solovka-dmytro@*.cosmeticpro.pp.ua'
+      email: 'solovka-dmytro@api.cosmeticpro.pp.ua'
       storage: /etc/traefik/acme/acme.json
       # https://docs.traefik.io/master/https/acme/#httpchallenge
       httpChallenge:
@@ -28,7 +28,7 @@ certificatesResolvers:
 http:
   routers:
     web-secure-router:
-      rule: 'Host(`*.cosmeticpro.pp.ua`) || Host(`www.*.cosmeticpro.pp.ua`)'
+      rule: 'Host(`api.cosmeticpro.pp.ua`) || Host(`www.api.cosmeticpro.pp.ua`)'
       entryPoints:
         - web-secure
       middlewares:
