--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ python_files = [
 
 # ==== Coverage ====
 [tool.coverage.run]
-include = ["cosmetic/**"]
+include = ["cosmeticpro/**"]
 omit = ["*/migrations/*", "*/tests/*"]
 plugins = ["django_coverage_plugin"]
 
@@ -25,7 +25,7 @@ target-version = ['py311']
 profile = "black"
 line_length = 119
 known_first_party = [
-    "cosmetic",
+    "cosmeticpro",
     "config",
 ]
 skip = ["venv/"]
