--- a/compose/local/nginx/default.conf
+++ b/compose/local/nginx/default.conf
@@ -1,5 +1,5 @@
 upstream api {
-    server cosmetic-api:5000;
+    server django:8000;
 }
 
 upstream front {
@@ -7,17 +7,17 @@ upstream front {
 }
 
 upstream dashboard {
-  server cosmetic-dashboard:4000;
+  server cosmetic-dashboard:3000;
 }
 
 server {
-  client_max_body_size 20M;
+    client_max_body_size 20M;
+    listen 8080;
+    
+    server_name localhost;
 
-  listen       3000;
-  server_name  localhost;
-
-    location /api/graphql {
-        proxy_pass http://api;
+    location /graphql {
+        proxy_pass http://api/graphql;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
@@ -27,6 +27,21 @@ server {
       alias /usr/share/nginx/media/;
     }
 
+    location /dashboard/ws {
+      proxy_pass http://dashboard;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+    }
+
+    location /dashboard/ {
+       proxy_pass http://dashboard;
+       proxy_redirect off;
+       proxy_set_header Host $host;
+       proxy_set_header X-Real-IP $remote_addr;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header X-Forwarded-Host $server_name;
+   }
 
     location /ws {
       proxy_pass http://front;
@@ -37,42 +52,6 @@ server {
 
     location / {
        proxy_pass http://front;
-       proxy_redirect off;
-       proxy_set_header Host $host;
-       proxy_set_header X-Real-IP $remote_addr;
-       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-       proxy_set_header X-Forwarded-Host $server_name;
-   }
-
-}
-
-server {
-  client_max_body_size 20M;
-
-  listen       4000;
-  server_name  localhost;
-
-    location /api/graphql {
-        proxy_pass http://api;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-
-    location /media/ {
-      alias /usr/share/nginx/media/;
-    }
-
-
-    location /ws {
-      proxy_pass http://dashboard;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "Upgrade";
-    }
-
-    location / {
-       proxy_pass http://dashboard;
        proxy_redirect off;
        proxy_set_header Host $host;
        proxy_set_header X-Real-IP $remote_addr;
