--- a/local.yml
+++ b/local.yml
@@ -96,30 +96,30 @@ services:
       - '5555:5555'
     command: /start-flower
 
-  cosmetic-front:
-    build:
-        context: ./front-next
-        dockerfile: ./docker/local/Dockerfile
-    container_name: cosmetic-front
-    # restart: unless-stopped
-    volumes:
-        - ./front-next:/app
-        - cosmetic_front:/app/node_modules
-    ports:
-        - "3000:3000"
-    command: pnpm dev
-    user: root
+  # cosmetic-front:
+  #   build:
+  #       context: ./front-next
+  #       dockerfile: ./docker/local/Dockerfile
+  #   container_name: cosmetic-front
+  #   # restart: unless-stopped
+  #   volumes:
+  #       - ./front-next:/app
+  #       - cosmetic_front:/app/node_modules
+  #   ports:
+  #       - "3000:3000"
+  #   command: pnpm dev
+  #   user: root
 
-  cosmetic-dashboard:
-    build:
-        context: ./dashboard-next
-        dockerfile: ./docker/local/Dockerfile
-    container_name: cosmetic-dashboard
-    # restart: unless-stopped
-    volumes:
-        - ./dashboard-next:/app
-        - cosmetic_dashboard:/app/node_modules
-    ports:
-        - "4000:4000"
-    command: pnpm dev
-    user: root
+  # cosmetic-dashboard:
+  #   build:
+  #       context: ./dashboard-next
+  #       dockerfile: ./docker/local/Dockerfile
+  #   container_name: cosmetic-dashboard
+  #   # restart: unless-stopped
+  #   volumes:
+  #       - ./dashboard-next:/app
+  #       - cosmetic_dashboard:/app/node_modules
+  #   ports:
+  #       - "4000:4000"
+  #   command: pnpm dev
+  #   user: root
