--- a/front-next/package.json
+++ b/front-next/package.json
@@ -10,19 +10,6 @@
 				"generate": "graphql-codegen --config codegen.yml"
 		},
 		"dependencies": {
-				"@types/node": "20.2.3",
-				"@types/react": "18.2.7",
-				"@types/react-dom": "18.2.4",
-				"autoprefixer": "10.4.14",
-				"eslint": "8.41.0",
-				"eslint-config-next": "13.4.3",
-				"next": "13.4.3",
-				"next-auth": "^4.18.10",
-				"postcss": "8.4.23",
-				"react": "18.2.0",
-				"react-dom": "18.2.0",
-				"tailwindcss": "3.3.2",
-				"typescript": "5.0.4",
 				"@apollo/client": "^3.7.1",
 				"@graphql-codegen/cli": "^2.8.0",
 				"@graphql-codegen/typed-document-node": "^2.3.1",
@@ -30,23 +17,42 @@
 				"@graphql-codegen/typescript-operations": "^2.5.1",
 				"@hookform/resolvers": "^2.9.10",
 				"@reduxjs/toolkit": "^1.8.5",
+				"@types/node": "20.2.3",
+				"@types/react": "18.2.7",
+				"@types/react-dom": "18.2.4",
 				"@types/uuid": "^9.0.0",
+				"autoprefixer": "10.4.5",
 				"axios": "^1.1.2",
+				"bootstrap": "^5.0.0",
 				"cookies-next": "^2.1.1",
+				"eslint": "8.41.0",
+				"eslint-config-next": "13.4.3",
 				"flutterwave-react-v3": "^1.3.0",
 				"graphql": "^16.6.0",
 				"jwt-decode": "^3.1.2",
+				"next": "13.4.3",
+				"next-auth": "^4.18.10",
 				"notiflix": "^3.2.5",
 				"numeral": "^2.0.6",
+				"postcss": "8.4.23",
+				"react": "18.2.0",
+				"react-dom": "18.2.0",
 				"react-hook-form": "^7.41.3",
 				"react-hot-toast": "^2.4.0",
 				"react-loading-icons": "^1.1.0",
 				"react-redux": "^8.0.4",
 				"styled-components": "^5.3.5",
+				"tailwindcss": "3.3.2",
+				"typescript": "5.0.4",
 				"uuid": "^9.0.0",
 				"yup": "^0.32.11"
 		},
 		"devDependencies": {
+				"@graphql-codegen/cli": "4.0.1",
+				"@graphql-codegen/introspection": "4.0.0",
+				"@graphql-codegen/typescript": "4.0.0",
+				"@graphql-codegen/typescript-operations": "4.0.0",
+				"@graphql-codegen/typescript-react-apollo": "3.3.7",
 				"@svgr/webpack": "^6.2.1",
 				"@testing-library/dom": "^8.19.1",
 				"@testing-library/jest-dom": "^5.16.4",
@@ -61,11 +67,9 @@
 				"jest-environment-jsdom": "^28.1.2",
 				"react-icons": "^4.4.0",
 				"react-test-renderer": "^18.2.0",
-				"ts-jest": "^28.0.5",
-				"@graphql-codegen/typescript-operations": "4.0.0",
-				"@graphql-codegen/typescript": "4.0.0",
-				"@graphql-codegen/typescript-react-apollo": "3.3.7",
-				"@graphql-codegen/introspection": "4.0.0",
-				"@graphql-codegen/cli": "4.0.1"
+				"ts-jest": "^28.0.5"
+		},
+		"resolutions": {
+				"autoprefixer": "10.4.5"
 		}
 }
